src/objects/News_Update__c.object
<CustomObject>
    <fields>
        <fullName>Class_Note__c</fullName>
        <label>Class Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>News Updates</relationshipLabel>
        <relationshipName>News_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Update__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>Date of Update</label>
        <type>DateTime</type>
    </fields>
    <label>News Update</label>
    <nameField>
        <displayFormat>NU-{00000}</displayFormat>
        <label>News Update ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>